test/syntax/pass/bug0.sync
type state =
  | S0
  | S1
  | S2

let node g s y =
  (merge y
    (S0 -> true)
    (S1 -> false)
    (S2 -> false))
