test/syntax/fail/merge_in_combinatorial.sync
let f =
  merge true (true -> 0) (false -> 0)
